--- a/builds/development/index.html
+++ b/builds/development/index.html
@@ -1,28 +1,36 @@
 <!doctype html>
-<html>
-<head lang="ru-RU">
-  <meta charset="UTF-8">
-  <title>This is Demo Template Which Use sass, gulp and npm-server</title>
-  <meta name="viewport" content="width=device-width">
-  <link rel="stylesheet" href="css/style.min.css">
-</head>
-<body>
+<html ng-app="ngFit">
+  <head lang="ru-RU">
+    <meta charset="UTF-8">
+    <title>This is Demo Template Which Use sass, gulp and npm-server</title>
+    <meta name="viewport" content="width=device-width">
+    <link rel="stylesheet" href="css/style.min.css">
+  </head>
+  <body>
 
-<div class="container">
-  <h1>This is new site</h1>
-  <p>
-    This is New Paragraph!
-  </p>
-  <p>
-    <a href="javascript:void(0)" class="btn btn-primary"><i class="mdi-action-account-balance-wallet"></i> Primary</a>
-    <a href="javascript:void(0)" class="btn btn-success"><i class="mdi-action-lock"></i> Success</a>
-    <a href="javascript:void(0)" class="btn btn-info"><i class="mdi-action-lock"></i> Info</a>
-  </p>
-</div>
-
-<script src="libs/jquery/jquery.js"></script>
-<script src="libs/bootstrap-material-design/js/material.js"></script>
-<script src="libs/bootstrap-material-design/js/ripples.js"></script>
-
-<script src="app/app.js"></script>
-</body>
+  <div class="container">
+    <h1>This is our feature ngFit App</h1>
+    <div class="row">
+      <div class="col-xs-3">
+        <input type="text" class="form-control col-sm-3" ng-model="myName" placeholder="Put your name"/>
+      </div>
+    </div>
+    <div>
+      This is me name: {{myName}}
+    </div>
+    <p>
+      <a href="javascript:void(0)" class="btn btn-primary"><i class="mdi-action-account-balance-wallet"></i> Primary</a>
+      <a href="javascript:void(0)" class="btn btn-success"><i class="mdi-action-lock"></i> Success</a>
+      <a href="javascript:void(0)" class="btn btn-info"><i class="mdi-action-lock"></i> Info</a>
+    </p>
+  </div>
+  <!-- Others JS Files -->
+  <script src="libs/jquery/jquery.js"></script>
+  <script src="libs/bootstrap-material-design/js/material.js"></script>
+  <script src="libs/bootstrap-material-design/js/ripples.js"></script>
+  <!-- AngularJs vDependencies -->
+  <script src="libs/angular/angular.js"></script>
+  <!-- Our JS App Fies -->
+  <script src="app/app.js"></script>
+  </body>
+</html>
