--- a/builds/development/index.html
+++ b/builds/development/index.html
@@ -29,7 +29,7 @@
   <script src="libs/bootstrap-material-design/js/material.js"></script>
   <script src="libs/bootstrap-material-design/js/ripples.js"></script>
   <!-- AngularJs vDependencies -->
-  <script src="libs/angular/angular.js"></script>
+  <script src="libs/angular/angular.concat.js"></script>
   <!-- Our JS App Fies -->
   <script src="app/app.js"></script>
   </body>
